fixed share icons in detail.comp behind day number

--- a/src/app/posts/post-details/post-details.component.scss
+++ b/src/app/posts/post-details/post-details.component.scss
@@ -558,6 +558,10 @@
             grid-column: 1/2;
             grid-row: 1/2;
 
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 43px 48px;
+
             min-height: 35vw;
             min-width: 180px;
 
@@ -566,10 +570,23 @@
             // background-size: contain;
             // background-repeat: no-repeat;
             background-position: 100% 20%;
+            .image {
+              grid-column: 1/2;
+              grid-row: 1/4;
+              // width: 100%;
+              // height: 100%;
+              // background-size: cover;
+              // background-position: 50% 50%;
+              // background-size: contain;
+              // background-repeat: no-repeat;
+            }
             &__category {
               max-width: $app-min-width - 10px;
               &--name {
               }
+            }
+            &__day {
+             margin-bottom: 30px;
             }
             &__month,
             &__day {
@@ -581,6 +598,7 @@
           .tags-section {
             grid-column: 1/2;
             grid-row: 2/3;
+
             margin-bottom: 0px;
 
             &__title {
@@ -600,11 +618,14 @@
             grid-row: 1/2;
             align-self: end;
             justify-self: end;
+            // align-self: end;
+            // justify-self: start;
             display: flex;
             flex-flow: row nowrap;
+
             justify-content: flex-end;
             align-items: flex-end;
-            margin: 0 20px 10px 0;
+            margin: 0 15px 5px 0px;
             background: transparent;
             &__title {
               display: none;
